5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1723_2499.log
== SUBMITION (2019-05-09 11:45:54) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + 1)/factorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.128172
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
0.00140115
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
0.00882523
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:09) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + 1)/factorial(i)
	i = i + 1
	
	'print(round(soma, 8))
-- ERROR:
File "XXXX", line 13
    'print(round(soma, 8))
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:16) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + 1)/factorial(i)
	i = i + 1
	
	print(round(soma, 8))
-- OUTPUT:
1.0
2.0
1.5
0.41666667
0.05902778
0.00882523
0.00140115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:25) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + 1)/factorial(i)
	i = i + 1
	
	print(round(soma, 8))
-- OUTPUT:
1.0
2.0
1.5
0.41666667
0.05902778
0.00882523
0.00140115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:33) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + 1)/factorial(i)
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
0.00140115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:38) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = (soma + 1)/factorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.130274
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
0.00140115
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
0.00882523
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:16) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + 1/factorial(i)
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:20) 
-- CODE:
from math import *

k = int(input("valor de k: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + 1/factorial(i)
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.190977
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
